.xmonad/xmobar.errors

xmobar.hs:1:1: error:
    Could not find module ‘Xmobar’
    Use -v to see a list of the files searched for.
  |
1 | import Xmobar
  | ^^^^^^^^^^^^^
